--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,14 @@ body {
   font-family: courier;
 }
 
+i {
+  color: #06D5C2;
+}
+
+b {
+  color: #06D5C2;
+}
+
 h1 {
   color: yellow;
   font-size: 60px;
