--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* HTML Body Styling */
 body {
-  background-color: #0C2902;
+  background-color: #010D3E;
   text-align: center;
   font-family: courier;
 }
