--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,29 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-body {margin:10%;font-family:'Montserrat',sans-serif;background:#eee;color:#666;}
-h1 {font-size:1.3em;text-transform:uppercase;}
-input {padding:6px;border:3px solid #999;background:none;font-family:'Montserrat',sans-serif;color:#666;font-size:16px;width:260px;}
-input:focus {border-color:#00aeff;outline:0;background:#f9f9f9;}
-input[type=submit] {width:80px;background:#00aeff;border-color:#00aeff;color:#eee;cursor:pointer;}
-span.zip {margin:1em 0;display:block;text-transform:uppercase;font-size:0.9em;color:#999;} span.zip:before {content:'ZIP code: '}
+*{margin:0;padding:0;}
+
+svg{
+  width:100%;
+
+}
+path{transition:all .5s;fill:rgba(0,0,0,0);stroke:black;}
+
+.indicator{
+  position:absolute;
+  display:inline;
+  background:rgba(0,0,0,1);
+  color:#f1f1f1;
+  padding:10px 30px;
+  font:20px Arial;
+  border-radius:5px;
+  min-width:300px;
+
+  text-transform:capitalize;
+  display:none;
+
+
+}
+
+.clear{clear:both}
+.name{float:left;margin-right:30px;}
+.flag{position:absolute;top:10px;right:20px;border:3px solid #f7ffe8;border-radius:3px;
+}
+.capital{clear:both;}
